Fix padding for sections on mobile

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ header {
     padding: 5% 0;
 }
 section {
-    padding: 5%;
+    padding: 40px 5%;
 }
 .about-list {
     background-color: hsl(237, 94.9%, 7.6%);
